배포, 개발시 DB주소 변경 및 User모델 수정
timestamps없애고 memberSince를 만들고 현재시간 저장
